--- a/Capstone/styles.css
+++ b/Capstone/styles.css
@@ -1,6 +1,10 @@
 *{
-    background-color: #000000;
     color: #ccc;
+    font-family: "Rajdhani",sans-serif;
+}
+
+p, h3,h2{
+    margin: 0;
 }
 
 body{
@@ -9,6 +13,7 @@ body{
     margin: 0;
     padding: 0;
 }
+
 .navbar{
     margin: 8px auto 0px;
     display: flex;
@@ -17,10 +22,15 @@ body{
     background-color: #000000;
 
 }
+
+.supernav{
+    margin: 0 auto;
+}
 .logo{
-    font-size: 22px;
+    font-size: 40px;
     font-weight: bold;
-    padding: 10px 10px;
+    font-family: "sarpanch",sans-serif;
+
 }
 ul{
     display: flex;
@@ -48,15 +58,18 @@ li:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Libre Franklin;
     font-size: 90px;
-    font-weight: 800;
+    font-weight: 500;
     line-height: 100px;
     letter-spacing: -0.02em;
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     padding: 10px;
+}
+
+.content1{
+    margin-top: 40px;
 }
 .img1{
     display: flex;
@@ -78,10 +91,10 @@ li:hover{
 .projects {
     padding: 20px;
     background-color: #000000;
-
 }
+
 .project-card:hover{
-    box-shadow: 12px 12px 10px lightblue;
+    box-shadow: 12px 12px 10px rgba(173, 216, 230, 0.188);
     cursor: pointer;
     transition: 0.5s;
 }
@@ -98,8 +111,11 @@ li:hover{
 }
 
 .project-card {
-    text-align: center;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
     padding: 10px;
+    gap: 5px;
     background-color: #000000;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(42, 11, 11, 0.1);
@@ -110,162 +126,6 @@ li:hover{
     height: auto;
     border-radius: 5px;
 }
-.text{
-    text-align: left;
-    font-weight: normal;
-}
-.about{
-    display: flex;
-    justify-content: center;
-    height: 504px;
-    background: #FFFFFF;
-}
-.sem{
-    width: 900px;
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 52px;
-    text-align: center;
-    letter-spacing: -0.01em;
-    color: #000000;
-
-}
-.sem:hover{
-    color: white;
-    text-shadow: 2px 2px 4px #000000;
-    transition: 1s;
-
-}
-.contact {
-    display: flex;
-    text-align: center;
-    margin:0px;
-    height: 150px;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.contact h2 {
-    width: 224px;
-    height: 40px;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 52px;
-    letter-spacing: -0.01em;
-    color: #000000;
-}
-
-.contact p {
-    text-align: left;
-    padding: 40px;
-    width: 300px;
-    flex-direction: column;
-    align-items: flex-end;
-}
-.get-in-touch {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-    height: 600px;
-    margin-top: 10px;
-    justify-content: center;
-}
-
-.get-in-touch h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-}
-
-.get-in-touch p {
-    font-size: 1em;
-    margin-bottom: 20px;
-    color: #555;
-}
-
-.input-group {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-
-.input-group input {
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    font-size: 1.2em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.submit-btn {
-    width: 330px;
-    display: block;
-    margin: 0 auto;
-    padding: 10px 20px;
-    background-color: #d32f2f;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 1em;
-    cursor: pointer;
-}
-
-.submit-btn:hover {
-    background-color: #b71c1c;
-}
-
-.skip-link {
-    display: block;
-    margin-top: 10px;
-    font-size: 0.9em;
-    color: #d32f2f;
-    text-decoration: none;
-}
-
-.skip-link:hover {
-    text-decoration: underline;
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    border-top: 1px solid #ddd;
-    font-size: 1em;
-}
-
-footer p {
-    margin: 0;
-}
-.end{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.end p{
-    margin: 40px;
-}
-
-.follow-btn {
-    background-color: #333;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 40px;
-}
-
-.follow-btn:hover {
-    background-color: #555;
-}
 
 .endsummary{
     font-size: 70px;
@@ -273,13 +133,31 @@ footer p {
     text-align: center;
 }
 
+.discover-section{
+    padding: 48px;
+}
+
+.content-holder{
+    text-align: center;
+    margin: 48px 0;
+}
+
+.section-text-div{
+    text-align: center;
+}
+
+.section-text{
+    font-weight: 400;
+    line-height: 68px;
+    font-size: 60px;
+    color: #e4dad7;
+}
 
 .services{
     display: flex;
     justify-content: space-between;
-    padding: auto;
-    height: 150px;
-    padding: 50px 150px;
+    padding: 4em;
+
 }
 
 .services-header{
@@ -289,15 +167,120 @@ footer p {
 }
 
 .services-actions{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    gap: 5px;
 }
-
+    
 .services-links{
     font-size: 18px;
     font-weight: 500;
-    height: 24px;
-    margin-right: 25px;
+    height: 12px;
     color: #e4dad7;
+    padding: 12px;
+    margin: 0;
+}
+
+.floating-text-div{
+    display: flex;
+    padding: 50px;
+    gap: 50px;
+}
+
+.float-div, .empty{
+    flex: 1;
+}
+
+.floating-text{
+    text-align: left;
+    padding-right: 20px;
+    font-weight: 400;
+}
+
+.testimonials-holder{
+    display: flex;
+    overflow: scroll;
+    gap: 30px;
+}
+
+.testimonials-holder::-webkit-scrollbar {
+    display: none;
+}
+
+.testimonials-header-div{
+    text-align: center;
+    padding: 50px 0;
+}
+
+.testimonials-header{
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.client-holder{
+    width: 288px;
+    min-width: 288px;
+    height: 178px;
+    background-color: rgba(224,191,184,0.12);
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding: 20px;
+    border-radius: 10px;
+    flex-wrap: wrap;
+}
+
+.client-detail-holder{
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+
+.client-logo{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+.client-detail{
+    font-size: 15px;
+}
+
+.client-company{
+    color: rgba(228, 218, 215, 0.62);
+}
+
+.client-comment{
+    padding-bottom: 8px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 40px 100px;
+    background-color: black;
+    margin-top: 50px;
+    border-top: 1px solid rgba(255, 255, 255, 0.304);
+}
+
+.footer-left-text{
+    font-family: "plus jakarta sans", sans-serif;
+    color: rgba(255, 255, 255, 0.457);
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.contact-btn{
+    width: 150px;
+    height: 48px;
+    color: rgba(255, 255, 255, 0.612);
+    border: 1px solid rgba(255, 255, 255, 0.378);
+    background-color: black;
+    font-family: "Plus jakarta sans", sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+    border-radius: 5px;
 }
